--- a/VESSELTITLE.HTML
+++ b/VESSELTITLE.HTML
@@ -3,5 +3,11 @@
 </HEDA>
 <BODY>
  선박 선택 화면
+ <select name="vessel">
+    <option value="">선박 선택</option>
+    <option value="https://AWEGG0416.GITHUB.IO/V.DONJUAN.HTML" target = "2">Don Juan</option>
+    <option value="회사원">회사원</option>
+    <option value="기타">기타</option>
+</select>
 </BODY>
 </HTML>
