--- a/VESSELTITLE.HTML
+++ b/VESSELTITLE.HTML
@@ -6,7 +6,7 @@
  <select name="vessel">
     <option value="">선박 선택</option>
     <option value="https://AWEGG0416.GITHUB.IO/V.DONJUAN.HTML" target = "2">Don Juan</option>
-    <option value="회사원">회사원</option>
+    <option value="회사원"target = "2">회사원</option>
     <option value="기타">기타</option>
 </select>
 </BODY>
