--- a/VESSELTITLE.HTML
+++ b/VESSELTITLE.HTML
@@ -5,8 +5,8 @@
  선박 선택 화면
  <select name="vessel">
     <option value="">선박 선택</option>
-    <option value="https://AWEGG0416.GITHUB.IO/V.DONJUAN.HTML" target = "2">Don Juan</option>
-    <option value="회사원"target = "2">회사원</option>
+    <option value="https://AWEGG0416.GITHUB.IO/V.DONJUAN.HTML" target = "two">Don Juan</option>
+    <option value="회사원"target = "two">회사원</option>
     <option value="기타">기타</option>
 </select>
 </BODY>
