--- a/VESSELTITLE.HTML
+++ b/VESSELTITLE.HTML
@@ -5,8 +5,8 @@
  선박 선택 화면
  <select name="vessel">
     <option value="">선박 선택</option>
-    <option value="https://AWEGG0416.GITHUB.IO/V.DONJUAN.HTML" target = "https://AWEGG0416.GITHUB.IO/V.DONJUAN.HTML">Don Juan</option>
-    <option value="https://AWEGG0416.GITHUB.IO/test.HTML" target = "https://AWEGG0416.GITHUB.IO/V.DONJUAN.HTML">회사원</option>
+    <option value=a href ="https://AWEGG0416.GITHUB.IO/V.DONJUAN.HTML" target = "https://AWEGG0416.GITHUB.IO/V.DONJUAN.HTML">Don Juan</option>
+    <option value=a href ="https://AWEGG0416.GITHUB.IO/test.HTML" target = "https://AWEGG0416.GITHUB.IO/V.DONJUAN.HTML">회사원</option>
     <option value="기타">기타</option>
 </select>
 </BODY>
