--- a/VESSELTITLE.HTML
+++ b/VESSELTITLE.HTML
@@ -3,9 +3,9 @@
 </HEDA>
 <BODY>
  선박 선택 화면
- <select name="VESSEL" onchange="window.open(value,'https://AWEGG0416.GITHUB.IO/VESSELMAIN.HTML');">
+ <select name="VESSEL" onchange="window.open(value,'_SELF');">
     <option value="">선박 선택</option>
-    <option value="https://AWEGG0416.GITHUB.IO/V.DONJUAN.HTML" target = "https://AWEGG0416.GITHUB.IO/V.DONJUAN.HTML">Don Juan</option>
+    <option value="https://AWEGG0416.GITHUB.IO/V.DONJUAN.HTML" target = "TWO">Don Juan</option>
     <option value="https://AWEGG0416.GITHUB.IO/test.HTML">회사원</option>
     <option value="기타">기타</option>
 </select>
