--- a/VESSELTITLE.HTML
+++ b/VESSELTITLE.HTML
@@ -6,6 +6,7 @@
  <select name="VESSEL" onchange="window.open(value,"_SELF");">
     <option value="">선박 선택</option>
     <option value="https://AWEGG0416.GITHUB.IO/V.DONJUAN.HTML" target = "TWO">Don Juan</option>
+    <option value="Donjuna2"><a href="https://AWEGG0416.GITHUB.IO/V.DONJUAN.HTML" target = "TWO"></a>Don Juan2</option>
     <option value="https://AWEGG0416.GITHUB.IO/test.HTML">회사원</option>
     <option value="기타">기타</option>
 </select>
