--- a/VESSELTITLE.HTML
+++ b/VESSELTITLE.HTML
@@ -3,7 +3,7 @@
 </HEDA>
 <BODY>
  선박 선택 화면
- <select name="VESSEL" onchange="window.open(value,"_SELF");">
+ <select name="VESSEL" >
     <option value="">선박 선택</option>
     <option value="https://AWEGG0416.GITHUB.IO/V.DONJUAN.HTML" target = "TWO">Don Juan</option>
     <option value="Donjuna2"><a href="https://AWEGG0416.GITHUB.IO/V.DONJUAN.HTML" target = "TWO"></a>Don Juan2</option>
