--- a/MASAN.HTML
+++ b/MASAN.HTML
@@ -19,13 +19,9 @@
   
 <div id="ww_1f8e276a842c2" v='1.3' loc='auto' a='{"t":"horizontal","lang":"ko","sl_lpl":1,"ids":[],"font":"Arial","sl_ics":"one_a","sl_sot":"celsius","cl_bkg":"image","cl_font":"#FFFFFF","cl_cloud":"#FFFFFF","cl_persp":"#81D4FA","cl_sun":"#FFC107","cl_moon":"#FFC107","cl_thund":"#FF5722","el_nme":3}'><a href="https://weatherwidget.org/tr/" id="ww_1f8e276a842c2_u" target="_blank" width=100%>Web Sitesi için Ücretsiz HTML Hava Durumu Widget</a></div><script async src="https://app1.weatherwidget.org/js/?id=ww_1f8e276a842c2" ></script> 
   
-  <iframe id="myIframe" src="httpS://i.badatime.com/view_day.jsp?idx=8" frameborder="0" marginwidth="0" marginheight="0" width=100% height=100%></iframe>
+  <iframe id="myIframe" src="httpS://i.badatime.com/view_day.jsp?idx=8" frameborder="0" marginwidth="0" marginheight="0" width=436 height=100%></iframe>
 
   
-  <script src="https://apps.elfsight.com/p/platform.js" defer></script>
-<div class="elfsight-app-ffdeaf48-654a-4129-aec8-d51a08f85bf0"></div>
   
 </body>
 </html>
-
-
