--- a/MASAN.HTML
+++ b/MASAN.HTML
@@ -15,9 +15,7 @@
 </head>
 <body>
   
-  
-  
-<div id="ww_1f8e276a842c2" v='1.3' loc='auto' a='{"t":"horizontal","lang":"ko","sl_lpl":1,"ids":[],"font":"Arial","sl_ics":"one_a","sl_sot":"celsius","cl_bkg":"image","cl_font":"#FFFFFF","cl_cloud":"#FFFFFF","cl_persp":"#81D4FA","cl_sun":"#FFC107","cl_moon":"#FFC107","cl_thund":"#FF5722","el_nme":3}'><a href="https://weatherwidget.org/tr/" id="ww_1f8e276a842c2_u" target="_blank" width=100%>Web Sitesi için Ücretsiz HTML Hava Durumu Widget</a></div><script async src="https://app1.weatherwidget.org/js/?id=ww_1f8e276a842c2" ></script> 
+ <div id="ww_800c3e92526d7" v='1.3' loc='auto' a='{"t":"horizontal","lang":"ko","sl_lpl":1,"ids":[],"font":"Arial","sl_ics":"one","sl_sot":"celsius","cl_bkg":"image","cl_font":"#FFFFFF","cl_cloud":"#FFFFFF","cl_persp":"#81D4FA","cl_sun":"#FFC107","cl_moon":"#FFC107","cl_thund":"#FF5722"}'><a href="https://weatherwidget.org/tr/" id="ww_800c3e92526d7_u" target="_blank">Web Sitesi için Ücretsiz HTML Hava Durumu Widget</a></div><script async src="https://app1.weatherwidget.org/js/?id=ww_800c3e92526d7"></script> 
   
   <iframe id="myIframe" src="httpS://i.badatime.com/view_day.jsp?idx=8" frameborder="0" marginwidth="0" marginheight="0" width=436 height=100%></iframe>
 
