--- a/MASAN.HTML
+++ b/MASAN.HTML
@@ -11,7 +11,12 @@
 
         }
     </script>
-  
+  <STYLE>
+BODY{
+WIDTH:450;
+HEIGHT:100%
+}
+</STYLE>
 </head>
 <body>
   
@@ -28,3 +33,4 @@
   
 </body>
 </html>
+
