--- a/MASAN.HTML
+++ b/MASAN.HTML
@@ -11,12 +11,17 @@
 
         }
     </script>
-  <STYLE>
-BODY{
-WIDTH:450VF;
-HEIGHT:100%
-}
-</STYLE>
+    <style>
+      body {
+      	height: 100%;
+      }
+      .vertical {
+        position: absolute;
+        top: 0;
+        height: 100%;
+        border-left: 1px solid #fff;
+      }
+    </style>
 </head>
 <body>
   
@@ -33,4 +38,3 @@ HEIGHT:100%
   
 </body>
 </html>
-
