--- a/MASAN.HTML
+++ b/MASAN.HTML
@@ -11,17 +11,12 @@
 
         }
     </script>
-    <style>
-      body {
-      	height: 100%;
-      }
-      .vertical {
-        position: absolute;
-        top: 0;
-        height: 100%;
-        border-left: 1px solid #fff;
-      }
-    </style>
+  <STYLE>
+BODY{
+WIDTH:450PX;
+HEIGHT:100%
+}
+</STYLE>
 </head>
 <body>
   
@@ -38,3 +33,5 @@
   
 </body>
 </html>
+
+
