--- a/MASAN.HTML
+++ b/MASAN.HTML
@@ -1,5 +1,6 @@
 <html>
 <head>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
     <script>
         function setIframeSource() {
             // behavior of myIframe
@@ -11,12 +12,7 @@
 
         }
     </script>
-  <STYLE>
-BODY{
-WIDTH:450PX;
-HEIGHT:100%
-}
-</STYLE>
+
 </head>
 <body>
   
@@ -33,5 +29,3 @@ HEIGHT:100%
   
 </body>
 </html>
-
-
