--- a/MASAN.HTML
+++ b/MASAN.HTML
@@ -12,7 +12,12 @@
 
         }
     </script>
-
+<STYLE>
+BODY{
+WIDTH:450PX;
+HEIGHT:100%
+}
+</STYLE>
 </head>
 <body>
   
@@ -29,3 +34,5 @@
   
 </body>
 </html>
+
+
