--- a/MASAN.HTML
+++ b/MASAN.HTML
@@ -22,7 +22,7 @@ HEIGHT:100%
 <body>
   
 <table border='0' width='436' height='200'>
-<tr><td><div id="ww_800c3e92526d7" v='1.3' loc='auto' a='{"t":"horizontal","lang":"ko","sl_lpl":1,"ids":[],"font":"Arial","sl_ics":"one","sl_sot":"celsius","cl_bkg":"image","cl_font":"#FFFFFF","cl_cloud":"#FFFFFF","cl_persp":"#81D4FA","cl_sun":"#FFC107","cl_moon":"#FFC107","cl_thund":"#FF5722"}'><a href="https://weatherwidget.org/tr/" id="ww_800c3e92526d7_u" target="_blank">Web Sitesi için Ücretsiz HTML Hava Durumu Widget</a></div><script async src="https://app1.weatherwidget.org/js/?id=ww_800c3e92526d7"></script>
+<tr><td><div id="ww_30e2d5915fe9b" v='1.3' loc='id' a='{"t":"horizontal","lang":"ko","sl_lpl":1,"ids":["wl2577"],"font":"Arial","sl_ics":"one","sl_sot":"celsius","cl_bkg":"#FFFFFF","cl_font":"#000000","cl_cloud":"#d4d4d4","cl_persp":"#2196F3","cl_sun":"#FFC107","cl_moon":"#FFC107","cl_thund":"#FF5722"}'>Weather Data Source: <a href="https://weerlabs.nl/weer_changwon/vandaag/" id="ww_30e2d5915fe9b_u" target="_blank">weerlabs.nl</a></div><script async src="https://app1.weatherwidget.org/js/?id=ww_30e2d5915fe9b"></script>
  </td></tr>
 
 </table>  
@@ -34,5 +34,3 @@ HEIGHT:100%
   
 </body>
 </html>
-
-
