--- a/WEATHER.HTML
+++ b/WEATHER.HTML
@@ -1,5 +1,6 @@
 <html>
 <head>
+      <meta name="viewport" content="width=device-width,initial-scale=0.78">
     <script>
         function setIframeSource() {
             // behavior of myIframe
@@ -18,13 +19,13 @@
         <select id="location" onchange="setIframeSource()"> 
           <option value="https://embed.windy.com/embed2.html?lat=35.925&lon=126.958&detailLat=35.232&detailLon=128.682&width=650&height=450&zoom=5&level=surface&overlay=wind&product=ecmwf&menu=&message=true&marker=&calendar=now&pressure=true&type=map&location=coordinates&detail=&metricWind=default&metricTemp=default&radarRange=-1" frameborder="0">기상도</option> 
          <option value="====">====</option>  
-          <option value="https://AWEGG0416.GITHUB.IO/V.DONJUAN.HTML">군산</option>
-          <option value="https://AWEGG0416.GITHUB.IO/V.DONJUAN.HTML">광양</option>
-          <option value="https://AWEGG0416.GITHUB.IO/V.DONJUAN.HTML">마산</option> 
-          <option value="https://AWEGG0416.GITHUB.IO/V.DONJUAN.HTML">목포</option>
-          <option value="https://AWEGG0416.GITHUB.IO/V.DONJUAN.HTML">울산</option>
-          <option value="https://AWEGG0416.GITHUB.IO/V.DONJUAN.HTML">인천</option> 
-          <option value="https://AWEGG0416.GITHUB.IO/V.DONJUAN.HTML">평택</option>
+          <option value="https://AWEGG0416.GITHUB.IO/KUNSAN.HTML">군산</option>
+          <option value="https://AWEGG0416.GITHUB.IO/KWANGYANG.HTML">광양</option>
+          <option value="https://AWEGG0416.GITHUB.IO/MASAN.HTML">마산</option> 
+          <option value="https://AWEGG0416.GITHUB.IO/MOKPO.HTML">목포</option>
+          <option value="https://AWEGG0416.GITHUB.IO/ULSAN.HTML">울산</option>
+          <option value="https://AWEGG0416.GITHUB.IO/INCHEON.HTML">인천</option> 
+          <option value="https://AWEGG0416.GITHUB.IO/PYUNGTAEK.HTML">평택</option>
          
       </select>
     </form>
