--- a/WEATHER.HTML
+++ b/WEATHER.HTML
@@ -15,8 +15,9 @@
 </head>
 <body>
     <form id="form1" method="post">
-       <label STYLE= "font-size: 40px"> SELECT LOCATION</label>
-        <select id="location" onchange="setIframeSource()" STYLE= "font-size: 40px; width: 200px"> 
+      <p style="text-align:center;">
+       <label STYLE= "font-size: 40px;"> SELECT LOCATION</label></P>
+        <select id="location" onchange="setIframeSource()" STYLE= "font-size: 40px; width: 200px; TEXT-ALIGN:CENTER"> 
           <option value="https://embed.windy.com/embed2.html?lat=35.925&lon=126.958&detailLat=35.232&detailLon=128.682&width=650&height=450&zoom=5&level=surface&overlay=wind&product=ecmwf&menu=&message=true&marker=&calendar=now&pressure=true&type=map&location=coordinates&detail=&metricWind=default&metricTemp=default&radarRange=-1" frameborder="0">기상도</option> 
          <option value="====">====</option>  
           <option value="https://AWEGG0416.GITHUB.IO/KUNSAN.HTML">군산</option>
