--- a/VESSEL.HTML
+++ b/VESSEL.HTML
@@ -18,16 +18,14 @@
             <p style="text-align:center;">
           <label STYLE= "font-size: 40px;"> SELECT VESSEL</label></P>
         <select id="location" onchange="setIframeSource()" STYLE= "font-size: 40px; width: 100%; TEXT-ALIGN:CENTER"> 
-          <option value="https://AWEGG0416.GITHUB.IO/VESSEL.jpg" selected>선박선택</option> 
+          <option value="선박선택">선박선택</option> 
           <option value="https://AWEGG0416.GITHUB.IO/V.DONJUAN.HTML">Don Juan</option> 
           <option value="https://www.americanas.com.br/">AMERICANAS</option> 
           <option value="https://www.bbc.com/">BBC</option> 
        </select>
     </form>
-    <iframe id="myIframe" src="http://example.com/" frameborder="0" marginwidth="0" marginheight="0" width=100% height=100%></iframe>
+    <iframe id="myIframe" src="https://AWEGG0416.GITHUB.IO/VESSEL.jpg" frameborder="0" marginwidth="0" marginheight="0" width=100% height=100%></iframe>
 
 
     </body>
 </html>
-
-
