--- a/CARGO.HTML
+++ b/CARGO.HTML
@@ -19,7 +19,7 @@
           <label STYLE= "font-size: 40px;"> SELECT CARGO</label></P>
         <select id="location" onchange="setIframeSource()" STYLE= "font-size: 40px; width: 100%; TEXT-ALIGN:CENTER"> 
           <option value="선박선택">MAKER</option> 
-          <option value="https://AWEGG0416.GITHUB.IO/VESSEL.HTML">HYUNDAI</option> 
+          <option value="https://AWEGG0416.GITHUB.IO/M.HYUNDAI.HTML">HYUNDAI</option> 
           <option value="https://www.americanas.com.br/">AMERICANAS</option> 
           <option value="https://www.bbc.com/">BBC</option> 
        </select>
