--- a/MASAN.HTML
+++ b/MASAN.HTML
@@ -24,9 +24,11 @@ HEIGHT:100%
 <table border='0' width='436' height='200'>
 <tr><td><div id="ww_30e2d5915fe9b" v='1.3' loc='id' a='{"t":"horizontal","lang":"ko","sl_lpl":1,"ids":["wl2577"],"font":"Arial","sl_ics":"one","sl_sot":"celsius","cl_bkg":"#FFFFFF","cl_font":"#000000","cl_cloud":"#d4d4d4","cl_persp":"#2196F3","cl_sun":"#FFC107","cl_moon":"#FFC107","cl_thund":"#FF5722"}'>Weather Data Source: <a href="https://weerlabs.nl/weer_changwon/vandaag/" id="ww_30e2d5915fe9b_u" target="_blank">weerlabs.nl</a></div><script async src="https://app1.weatherwidget.org/js/?id=ww_30e2d5915fe9b"></script>
  </td></tr>
+<tr><td>  <div id="ww_3b96e5bf1ad53" v='1.3' loc='id' a='{"t":"responsive","lang":"ko","sl_lpl":1,"ids":["wl2577"],"font":"Arial","sl_ics":"one","sl_sot":"celsius","cl_bkg":"#FFFFFF","cl_font":"#000000","cl_cloud":"#d4d4d4","cl_persp":"#2196F3","cl_sun":"#FFC107","cl_moon":"#FFC107","cl_thund":"#FF5722","el_nme":3,"el_ctm":3,"el_cwi":3,"cl_odd":"#0000000a"}'>Weather Data Source: <a href="https://weerlabs.nl/weer_changwon/week/" id="ww_3b96e5bf1ad53_u" target="_blank">7 dagen weer Changwon</a></div><script async src="https://app1.weatherwidget.org/js/?id=ww_3b96e5bf1ad53"></script>
 
-</table>  
-  
+ </td></tr>
+
+  </table>  
  
   <iframe id="myIframe" src="httpS://i.badatime.com/view_day.jsp?idx=8" frameborder="0" marginwidth="0" marginheight="0" width=445 height=100%></iframe>
 
