--- a/INCHEON.HTML
+++ b/INCHEON.HTML
@@ -24,7 +24,9 @@ HEIGHT:100%
 <table border='0' width='436' height='200'>
 <tr><td><div id="ww_3809f2bc09b11" v='1.3' loc='id' a='{"t":"horizontal","lang":"ko","sl_lpl":1,"ids":["wl2311"],"font":"Arial","sl_ics":"one","sl_sot":"celsius","cl_bkg":"#FFFFFF","cl_font":"#000000","cl_cloud":"#d4d4d4","cl_persp":"#2196F3","cl_sun":"#FFC107","cl_moon":"#FFC107","cl_thund":"#FF5722"}'>Weather Data Source: <a href="https://weerlabs.nl/weer_incheon/morgen/" id="ww_3809f2bc09b11_u" target="_blank">weer morgen Incheon per uur</a></div><script async src="https://app1.weatherwidget.org/js/?id=ww_3809f2bc09b11"></script>
  </td></tr>
-
+<tr><td>
+<div id="ww_e20de20c28bc3" v='1.3' loc='id' a='{"t":"responsive","lang":"ko","sl_lpl":1,"ids":["wl2311"],"font":"Arial","sl_ics":"one","sl_sot":"celsius","cl_bkg":"#FFFFFF","cl_font":"#000000","cl_cloud":"#d4d4d4","cl_persp":"#2196F3","cl_sun":"#FFC107","cl_moon":"#FFC107","cl_thund":"#FF5722","el_nme":3,"el_cwi":3,"el_ctm":3,"cl_odd":"#0000000a"}'>Weather Data Source: <a href="https://weerlabs.nl/weer_incheon/week/" id="ww_e20de20c28bc3_u" target="_blank">weer in Incheon deze week</a></div><script async src="https://app1.weatherwidget.org/js/?id=ww_e20de20c28bc3"></script>
+</td></tr>
 </table>  
   
  
