--- a/MOKPO.HTML
+++ b/MOKPO.HTML
@@ -24,7 +24,9 @@ HEIGHT:100%
 <table border='0' width='436' height='200'>
 <tr><td><div id="ww_25aa1417b6052" v='1.3' loc='id' a='{"t":"horizontal","lang":"ko","sl_lpl":1,"ids":["wl7435"],"font":"Arial","sl_ics":"one","sl_sot":"celsius","cl_bkg":"#FFFFFF","cl_font":"#000000","cl_cloud":"#d4d4d4","cl_persp":"#2196F3","cl_sun":"#FFC107","cl_moon":"#FFC107","cl_thund":"#FF5722"}'>Weather for the Following Location: <a href="https://2ua.org/kor/mokpo/map/" id="ww_25aa1417b6052_u" target="_blank">Mokpo map, South Korea</a></div><script async src="https://app1.weatherwidget.org/js/?id=ww_25aa1417b6052"></script>
  </td></tr>
-
+<tr><td>
+<div id="ww_85cb10f4d2941" v='1.3' loc='id' a='{"t":"responsive","lang":"ko","sl_lpl":1,"ids":["wl7435"],"font":"Arial","sl_ics":"one","sl_sot":"celsius","cl_bkg":"#FFFFFF","cl_font":"#000000","cl_cloud":"#d4d4d4","cl_persp":"#2196F3","cl_sun":"#FFC107","cl_moon":"#FFC107","cl_thund":"#FF5722","el_nme":3,"el_cwi":3,"el_ctm":3,"cl_odd":"#0000000a"}'>Weather for the Following Location: <a href="https://2ua.org/kor/mokpo/map/" id="ww_85cb10f4d2941_u" target="_blank">Mokpo map, South Korea</a></div><script async src="https://app1.weatherwidget.org/js/?id=ww_85cb10f4d2941"></script>
+</td></tr>
 </table>  
   
  
