--- a/ULSAN.HTML
+++ b/ULSAN.HTML
@@ -24,7 +24,9 @@ HEIGHT:100%
 <table border='0' width='436' height='200'>
 <tr><td><div id="ww_1696680d80b72" v='1.3' loc='id' a='{"t":"horizontal","lang":"ko","sl_lpl":1,"ids":["wl3229"],"font":"Arial","sl_ics":"one","sl_sot":"celsius","cl_bkg":"#FFFFFF","cl_font":"#000000","cl_cloud":"#d4d4d4","cl_persp":"#2196F3","cl_sun":"#FFC107","cl_moon":"#FFC107","cl_thund":"#FF5722"}'>Weather Data Source: <a href="https://weerlabs.nl/weer_ulsan/" id="ww_1696680d80b72_u" target="_blank">weersvoorspelling Ulsan</a></div><script async src="https://app1.weatherwidget.org/js/?id=ww_1696680d80b72"></script>
  </td></tr>
-
+<tr><td>
+<div id="ww_3135da03e5dc8" v='1.3' loc='id' a='{"t":"responsive","lang":"ko","sl_lpl":1,"ids":["wl3229"],"font":"Arial","sl_ics":"one","sl_sot":"celsius","cl_bkg":"#FFFFFF","cl_font":"#000000","cl_cloud":"#d4d4d4","cl_persp":"#2196F3","cl_sun":"#FFC107","cl_moon":"#FFC107","cl_thund":"#FF5722","el_nme":3,"el_cwi":3,"el_ctm":3,"cl_odd":"#0000000a"}'>Weather Data Source: <a href="https://weerlabs.nl/weer_ulsan/morgen/" id="ww_3135da03e5dc8_u" target="_blank">het weer morgen Ulsan</a></div><script async src="https://app1.weatherwidget.org/js/?id=ww_3135da03e5dc8"></script>
+</td></tr>
 </table>  
   
  
