--- a/M.HYUNDAI.HTML
+++ b/M.HYUNDAI.HTML
@@ -18,7 +18,7 @@
 
         <select id="location" onchange="setIframeSource()" STYLE= "font-size: 40px; width: 100%; TEXT-ALIGN:CENTER"> 
           <option value="선박선택">MODEL</option> 
-          <option value="https://AWEGG0416.GITHUB.IO/V.DONJUAN.HTML">SANTAFE</option> 
+          <option value="https://AWEGG0416.GITHUB.IO/C.HMC.VENUE.HTML">VENUE</option> 
           <option value="https://www.americanas.com.br/">AMERICANAS</option> 
           <option value="https://www.bbc.com/">BBC</option> 
        </select>
