--- a/C.HMC.VENUE.HTML
+++ b/C.HMC.VENUE.HTML
@@ -1,6 +1,6 @@
 <html>
 <head>
-        <meta name="viewport" content="width=device-width,initial-scale=0.78">
+        <meta name="viewport" content="width=device-width, initial-scale=0.78, maximum-scale=0.78">
 
 </head>
 <body>
