--- a/C.HMC.VENUE.HTML
+++ b/C.HMC.VENUE.HTML
@@ -1,6 +1,6 @@
 <html>
 <head>
-        <meta name="viewport" content="width=device-width, initial-scale=0.78, maximum-scale=0.78">
+        <meta name="viewport" content="width=device-width, initial-scale=0.78">
 
 </head>
 <body>
@@ -8,7 +8,7 @@
 <table style="border-collapse: collapse; width: 100%;" border="1" data-ke-align="alignLeft">
 <tbody>
 <tr>
-<td style="width: 100%;"><img src="https://www.hyundai.com/contents/vr360/QX05/exterior/A2B/001.png" /></td>
+<td style="width: 100%;"><img src="https://www.hyundai.com/contents/vr360/QX05/exterior/A2B/001.png" style="max-width: 100%; height: auto;"></td>
 </tr>
 </tbody>
 </table>
