--- a/C.HMC.VENUE.HTML
+++ b/C.HMC.VENUE.HTML
@@ -14,6 +14,7 @@
 </table>
 <p data-ke-size="size16"><b>SIZE(L x W x H)</b> : 4.12 x 1.77 x 1.592</p>
 <p data-ke-size="size16"><b>WEIGHT(MT)</b> : 1.215</p>
+<p data-ke-size="size16"><b>STOWAGE CODE / MAKER CODE(MT)</b> : VNU / QX</p>
 <p data-ke-size="size16">&nbsp;</p>
 <p data-ke-size="size16"><span style="color: #ee2323;"><b>REMARK</b></span></p>
 <p data-ke-size="size16"><b>-</b> 없음</p>
