--- a/CARGO.HTML
+++ b/CARGO.HTML
@@ -20,8 +20,10 @@
         <select id="location" onchange="setIframeSource()" STYLE= "font-size: 40px; width: 100%; TEXT-ALIGN:CENTER"> 
           <option value="선박선택">MAKER</option> 
           <option value="https://AWEGG0416.GITHUB.IO/M.HYUNDAI.HTML">HYUNDAI</option> 
-          <option value="https://www.americanas.com.br/">AMERICANAS</option> 
-          <option value="https://www.bbc.com/">BBC</option> 
+          <option value="https://AWEGG0416.GITHUB.IO/M.KIA.HTML">KIA</option> 
+          <option value="https://AWEGG0416.GITHUB.IO/M.SSANGYONG.HTML">SSANGYONG</option>
+          <option value="https://www.bbc.com/">VOLVO</option>
+          <option value="https://www.bbc.com/">준비중</option>
        </select>
     </form>
     <iframe id="myIframe" src="https://AWEGG0416.GITHUB.IO/VESSEL.jpg" frameborder="0" marginwidth="0" marginheight="0" width=100% height=80%></iframe>
