--- a/WEATHER.HTML
+++ b/WEATHER.HTML
@@ -27,7 +27,10 @@
           <option value="https://AWEGG0416.GITHUB.IO/ULSAN.HTML">울산</option>
           <option value="https://AWEGG0416.GITHUB.IO/INCHEON.HTML">인천</option> 
           <option value="https://AWEGG0416.GITHUB.IO/PYUNGTAEK.HTML">평택</option>
-         
+         <option value="====">====</option>               
+          <option value="https://www.weather.go.kr/w/weather/warning/status.do">특보현황</option>
+          <option value="https://www.weather.go.kr/w/typhoon/ko/weather/typhoon_02.jsp">태풍</option>
+          <option value="https://www.weather.go.kr/w/dust/dust-obs/values.do">황사</option>    
       </select>
     </form>
  
