--- a/WEATHER.HTML
+++ b/WEATHER.HTML
@@ -16,10 +16,10 @@
 <body>
     <form id="form1" method="post">
       <p style="text-align:center;">
-       <label STYLE= "font-size: 40px;"> SELECT LOCATION</label></P>
+       <label STYLE= "font-size: 40px;"> 날씨 정보</label></P>
         <select id="location" onchange="setIframeSource()" STYLE= "font-size: 40px; width: 200px; TEXT-ALIGN:CENTER"> 
-          <option value="https://embed.windy.com/embed2.html?lat=35.925&lon=126.958&detailLat=35.232&detailLon=128.682&width=650&height=450&zoom=5&level=surface&overlay=wind&product=ecmwf&menu=&message=true&marker=&calendar=now&pressure=true&type=map&location=coordinates&detail=&metricWind=default&metricTemp=default&radarRange=-1" frameborder="0">기상도</option> 
-         <option value="====">====</option>  
+
+         <option value="====">SELECT LOCATION</option>  
           <option value="https://AWEGG0416.GITHUB.IO/KUNSAN.HTML">군산</option>
           <option value="https://AWEGG0416.GITHUB.IO/KWANGYANG.HTML">광양</option>
           <option value="https://AWEGG0416.GITHUB.IO/MASAN.HTML">마산</option> 
@@ -27,8 +27,9 @@
           <option value="https://AWEGG0416.GITHUB.IO/ULSAN.HTML">울산</option>
           <option value="https://AWEGG0416.GITHUB.IO/INCHEON.HTML">인천</option> 
           <option value="https://AWEGG0416.GITHUB.IO/PYUNGTAEK.HTML">평택</option>
-         <option value="====">====</option>               
+          <option value="====">====</option>               
           <option value="https://www.weather.go.kr/w/weather/warning/status.do">특보현황</option>
+                    <option value="https://embed.windy.com/embed2.html?lat=35.925&lon=126.958&detailLat=35.232&detailLon=128.682&width=650&height=450&zoom=5&level=surface&overlay=wind&product=ecmwf&menu=&message=true&marker=&calendar=now&pressure=true&type=map&location=coordinates&detail=&metricWind=default&metricTemp=default&radarRange=-1" frameborder="0">바람</option> 
           <option value="https://www.weather.go.kr/w/typhoon/ko/weather/typhoon_02.jsp">태풍</option>
           <option value="https://www.weather.go.kr/w/dust/dust-obs/values.do">황사</option>    
       </select>
