--- a/WEATHER.HTML
+++ b/WEATHER.HTML
@@ -17,7 +17,7 @@
     <form id="form1" method="post">
       <p style="text-align:center;">
        <label STYLE= "font-size: 40px;"> 날씨 정보</label></P>
-        <select id="location" onchange="setIframeSource()" STYLE= "font-size: 40px; width: 200px; TEXT-ALIGN:CENTER"> 
+        <select id="location" onchange="setIframeSource()" STYLE= "font-size: 40px; width: 100%; TEXT-ALIGN:CENTER"> 
 
          <option value="====">SELECT LOCATION</option>  
           <option value="https://AWEGG0416.GITHUB.IO/KUNSAN.HTML">군산</option>
