--- a/VESSEL.HTML
+++ b/VESSEL.HTML
@@ -16,9 +16,9 @@
 <body>
     <form id="form1" method="post">
             <p style="text-align:center;">
-          <label STYLE= "font-size: 40px;"> SELECT VESSEL</label></P>
+          <label STYLE= "font-size: 40px;"> 선박 정보</label></P>
         <select id="location" onchange="setIframeSource()" STYLE= "font-size: 40px; width: 100%; TEXT-ALIGN:CENTER"> 
-          <option value="선박선택">선박선택</option> 
+          <option value="선박선택">SELECT VESSEL</option> 
           <option value="https://AWEGG0416.GITHUB.IO/V.DONJUAN.HTML">Don Juan</option> 
           <option value="https://www.americanas.com.br/">AMERICANAS</option> 
           <option value="https://www.bbc.com/">BBC</option> 
