--- a/CARGO.HTML
+++ b/CARGO.HTML
@@ -16,7 +16,7 @@
 <body>
     <form id="form1" method="post">
             <p style="text-align:center;">
-          <label STYLE= "font-size: 40px;"> SELECT CARGO</label></P>
+          <label STYLE= "font-size: 40px;"> 화물 </label></P>
         <select id="location" onchange="setIframeSource()" STYLE= "font-size: 40px; width: 100%; TEXT-ALIGN:CENTER"> 
           <option value="선박선택">MAKER</option> 
           <option value="https://AWEGG0416.GITHUB.IO/M.HYUNDAI.HTML">HYUNDAI</option> 
