--- a/WEATHER.HTML
+++ b/WEATHER.HTML
@@ -35,7 +35,7 @@
       </select>
     </form>
  
-    <iframe id="myIframe" src="https://embed.windy.com/embed2.html?lat=35.925&lon=126.958&detailLat=35.232&detailLon=128.682&width=650&height=450&zoom=5&level=surface&overlay=wind&product=ecmwf&menu=&message=true&marker=&calendar=now&pressure=true&type=map&location=coordinates&detail=&metricWind=default&metricTemp=default&radarRange=-1" frameborder="0" frameborder="0" marginwidth="0" marginheight="0" width=100% height=100%></iframe>
+    <iframe id="myIframe" src="https://www.weather.go.kr/wgis-nuri/html/map.html" frameborder="0" frameborder="0" marginwidth="0" marginheight="0" width=100% height=100%></iframe>
   
     </body>
 </body>
