--- a/M.HYUNDAI.HTML
+++ b/M.HYUNDAI.HTML
@@ -18,9 +18,9 @@
 
         <select id="location" onchange="setIframeSource()" STYLE= "font-size: 40px; width: 100%; TEXT-ALIGN:CENTER"> 
           <option value="선박선택">MODEL</option> 
-          <option value="https://AWEGG0416.GITHUB.IO/CARGO/AVANTE.HTML">AVANTE</option> 
-          <option value="https://AWEGG0416.GITHUB.IO/CARGO/G70.HTML">G70</option> 
-          <option value="https://AWEGG0416.GITHUB.IO/CARGO/G80.HTML">G80</option> 
+          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HMC/AVANTE.HTML">AVANTE</option> 
+          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HMC/G70.HTML">G70</option> 
+          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HMC/G80.HTML">G80</option> 
        </select>
     </form>
     <iframe id="myIframe" src="https://AWEGG0416.GITHUB.IO/VESSEL.jpg" frameborder="0" marginwidth="0" marginheight="0" width=100% height=80%></iframe>
