--- a/CARGO/HMC/AVANTE.HTML
+++ b/CARGO/HMC/AVANTE.HTML
@@ -15,7 +15,8 @@
 </table>
 <p data-ke-size="size20"><b>SIZE(L x W x H)</b> : 4.12 x 1.875 x 1.422</p>
 <p data-ke-size="size20"><b>WEIGHT(MT)</b> : 1.331</p>
-<p data-ke-size="size20"><b>STOWAGE CODE / MAKER CODE(MT)</b> : AVT, AVTH / CN7, CN7 HEV</p>
+<p data-ke-size="size20"><b>STOWAGE CODE</b> : AVT, AVTH</p>
+<p data-ke-size="size20"><b>AEU</b> : 1.34</p>
 <p data-ke-size="size10">&nbsp;</p>
 <p data-ke-size="size20"><span style="color: #ee2323;"><b>REMARK</b></span></p>
 <p data-ke-size="size20"><b>-</b> 없음</p>
