--- a/CARGO/HMC/G70.HTML
+++ b/CARGO/HMC/G70.HTML
@@ -14,7 +14,8 @@
 </table>
 <p data-ke-size="size20"><b>SIZE(L x W x H)</b> : 4.88 x 1.95 x 1.45</p>
 <p data-ke-size="size20"><b>WEIGHT(MT)</b> : 1.998</p>
-<p data-ke-size="size20"><b>STOWAGE CODE / MAKER CODE(MT)</b> : G70 / IK</p>
+<p data-ke-size="size20"><b>STOWAGE CODE</b> : G70</p>
+        <p data-ke-size="size20"><b>AEU</b> : 1.45</p>
 <p data-ke-size="size10">&nbsp;</p>
 <p data-ke-size="size20"><span style="color: #ee2323;"><b>REMARK</b></span></p>
 <p data-ke-size="size20"><b>-</b> 없음</p>
