--- a/CARGO/HMC/G80.HTML
+++ b/CARGO/HMC/G80.HTML
@@ -14,7 +14,8 @@
 </table>
 <p data-ke-size="size20"><b>SIZE(L x W x H)</b> : 5.1 x 1.93 x 1.48</p>
 <p data-ke-size="size20"><b>WEIGHT(MT)</b> : 1.526</p>
-<p data-ke-size="size20"><b>STOWAGE CODE / MAKER CODE(MT)</b> : G80 / DH</p>
+<p data-ke-size="size20"><b>STOWAGE CODE</b> : G80</p>
+        <p data-ke-size="size20"><b>AEU</b> : 1.54</p>
 <p data-ke-size="size10">&nbsp;</p>
 <p data-ke-size="size20"><span style="color: #ee2323;"><b>REMARK</b></span></p>
 <p data-ke-size="size20"><b>-</b> 없음</p>
