--- a/CARGO/HMC/GV70.HTML
+++ b/CARGO/HMC/GV70.HTML
@@ -14,7 +14,8 @@
 </table>
 <p data-ke-size="size20"><b>SIZE(L x W x H)</b> : 4.85 x 1.98 x 1.67</p>
 <p data-ke-size="size20"><b>WEIGHT(MT)</b> : 1.82</p>
-<p data-ke-size="size20"><b>STOWAGE CODE / MAKER CODE(MT)</b> : GV70 / OR</p>
+<p data-ke-size="size20"><b>STOWAGE CODE</b> : GV70</p>
+        <p data-ke-size="size20"><b>AEU</b> : 1.45</p>
 <p data-ke-size="size10">&nbsp;</p>
 <p data-ke-size="size20"><span style="color: #ee2323;"><b>REMARK</b></span></p>
 <p data-ke-size="size20"><b>-</b> 없음</p>
