--- a/CARGO/HMC/I30.HTML
+++ b/CARGO/HMC/I30.HTML
@@ -15,7 +15,8 @@
 </table>
 <p data-ke-size="size20"><b>SIZE(L x W x H)</b> : 4.4 x 1.8 x 1.46</p>
 <p data-ke-size="size20"><b>WEIGHT(MT)</b> : 1.325</p>
-<p data-ke-size="size20"><b>STOWAGE CODE / MAKER CODE(MT)</b> : I30 / PD</p>
+<p data-ke-size="size20"><b>STOWAGE CODE</b> : I30</p>
+        <p data-ke-size="size20"><b>AEU</b> : 1.20</p>
 <p data-ke-size="size10">&nbsp;</p>
 <p data-ke-size="size20"><span style="color: #ee2323;"><b>REMARK</b></span></p>
 <p data-ke-size="size20"><b>-</b> 없음</p>
