--- a/CARGO/HMC/IONIQ5.HTML
+++ b/CARGO/HMC/IONIQ5.HTML
@@ -15,7 +15,8 @@
 </table>
 <p data-ke-size="size20"><b>SIZE(L x W x H)</b> : 4.783 x 1.973 x 1.647</p>
 <p data-ke-size="size20"><b>WEIGHT(MT)</b> : 2.17</p>
-<p data-ke-size="size20"><b>STOWAGE CODE / MAKER CODE(MT)</b> : IOE5 / GIW</p>
+<p data-ke-size="size20"><b>STOWAGE CODE</b> : IOE5</p>
+        <p data-ke-size="size20"><b>AEU</b> : 1.43</p>
 <p data-ke-size="size10">&nbsp;</p>
 <p data-ke-size="size20"><span style="color: #ee2323;"><b>REMARK</b></span></p>
 <p data-ke-size="size20"><b>-</b> 없음</p>
