--- a/CARGO/HMC/KONA.HTML
+++ b/CARGO/HMC/KONA.HTML
@@ -15,7 +15,8 @@
 </table>
 <p data-ke-size="size20"><b>SIZE(L x W x H)</b> : 4.3 x 1.81 x 1.57</p>
 <p data-ke-size="size20"><b>WEIGHT(MT)</b> : 1.35</p>
-<p data-ke-size="size20"><b>STOWAGE CODE / MAKER CODE(MT)</b> : KON, KOE / OS, OS-EV</p>
+<p data-ke-size="size20"><b>STOWAGE CODE</b> : KON, KOE</p>
+        <p data-ke-size="size20"><b>AEU</b> : 1.17</p>
 <p data-ke-size="size10">&nbsp;</p>
 <p data-ke-size="size20"><span style="color: #ee2323;"><b>REMARK</b></span></p>
 <p data-ke-size="size20"><b>-</b> 없음</p>
