--- a/CARGO/HMC/NEXO.HTML
+++ b/CARGO/HMC/NEXO.HTML
@@ -15,7 +15,8 @@
 </table>
 <p data-ke-size="size20"><b>SIZE(L x W x H)</b> : 4.73 x 1.86 x 1.64</p>
 <p data-ke-size="size20"><b>WEIGHT(MT)</b> : 1.89</p>
-<p data-ke-size="size20"><b>STOWAGE CODE / MAKER CODE(MT)</b> : NXO / FE</p>
+<p data-ke-size="size20"><b>STOWAGE CODE</b> : NXO</p>
+        <p data-ke-size="size20"><b>AEU</b> : 1.42</p>
 <p data-ke-size="size10">&nbsp;</p>
 <p data-ke-size="size20"><span style="color: #ee2323;"><b>REMARK</b></span></p>
 <p data-ke-size="size20"><b>-</b> 없음</p>
