--- a/CARGO/HMC/PALISADE.HTML
+++ b/CARGO/HMC/PALISADE.HTML
@@ -14,7 +14,8 @@
 </table>
 <p data-ke-size="size20"><b>SIZE(L x W x H)</b> : 5.1 x 2.1 x 1.75</p>
 <p data-ke-size="size20"><b>WEIGHT(MT)</b> : 1.899</p>
-<p data-ke-size="size20"><b>STOWAGE CODE / MAKER CODE(MT)</b> : PSD / LX2</p>
+<p data-ke-size="size20"><b>STOWAGE CODE</b> : PSD</p>
+        <p data-ke-size="size20"><b>AEU</b> : 1.58</p>
 <p data-ke-size="size10">&nbsp;</p>
 <p data-ke-size="size20"><span style="color: #ee2323;"><b>REMARK</b></span></p>
 <p data-ke-size="size20"><b>-</b> 없음</p>
