--- a/CARGO/HMC/PORTER.HTML
+++ b/CARGO/HMC/PORTER.HTML
@@ -15,7 +15,8 @@
 </table>
 <p data-ke-size="size20"><b>SIZE(L x W x H)</b> : 4.85 x 1.81 x 1.97</p>
 <p data-ke-size="size20"><b>WEIGHT(MT)</b> : 1.62</p>
-<p data-ke-size="size20"><b>STOWAGE CODE / MAKER CODE(MT)</b> : PTR / HR</p>
+<p data-ke-size="size20"><b>STOWAGE CODE</b> : PTR</p>
+        <p data-ke-size="size20"><b>AEU</b> : 1.35</p>
 <p data-ke-size="size10">&nbsp;</p>
 <p data-ke-size="size20"><span style="color: #ee2323;"><b>REMARK</b></span></p>
 <p data-ke-size="size20"><b>-</b> 없음</p>
