--- a/CARGO/HMC/SANTAFE.HTML
+++ b/CARGO/HMC/SANTAFE.HTML
@@ -14,7 +14,8 @@
 </table>
 <p data-ke-size="size20"><b>SIZE(L x W x H)</b> : 4.86 x 1.97 x 1.73</p>
 <p data-ke-size="size20"><b>WEIGHT(MT)</b> : 1.895</p>
-<p data-ke-size="size20"><b>STOWAGE CODE / MAKER CODE(MT)</b> : STF / TM</p>
+<p data-ke-size="size20"><b>STOWAGE CODE</b> : STF</p>
+        <p data-ke-size="size20"><b>AEU</b> : 1.44</p>
 <p data-ke-size="size10">&nbsp;</p>
 <p data-ke-size="size20"><span style="color: #ee2323;"><b>REMARK</b></span></p>
 <p data-ke-size="size20"><b>-</b> 없음</p>
