--- a/CARGO/HMC/STARIA.HTML
+++ b/CARGO/HMC/STARIA.HTML
@@ -14,7 +14,8 @@
 </table>
 <p data-ke-size="size20"><b>SIZE(L x W x H)</b> : 5.33 x 2.146 x 2.03</p>
 <p data-ke-size="size20"><b>WEIGHT(MT)</b> : 2.38</p>
-<p data-ke-size="size20"><b>STOWAGE CODE / MAKER CODE(MT)</b> : STA / US4</p>
+<p data-ke-size="size20"><b>STOWAGE CODE</b> : STA</p>
+        <p data-ke-size="size20"><b>AEU</b> : 1.71</p>
 <p data-ke-size="size10">&nbsp;</p>
 <p data-ke-size="size20"><span style="color: #ee2323;"><b>REMARK</b></span></p>
 <p data-ke-size="size20"><b>-</b> 없음</p>
