--- a/CARGO/HMC/TUCSON.HTML
+++ b/CARGO/HMC/TUCSON.HTML
@@ -15,7 +15,8 @@
 </table>
 <p data-ke-size="size20"><b>SIZE(L x W x H)</b> : 4.74 x 1.92 x 1.69</p>
 <p data-ke-size="size20"><b>WEIGHT(MT)</b> : 1.695</p>
-<p data-ke-size="size20"><b>STOWAGE CODE / MAKER CODE(MT)</b> : TUC, TUCH / NX4, NX4 HEV</p>
+<p data-ke-size="size20"><b>STOWAGE CODE</b> : TUC, TUCH</p>
+        <p data-ke-size="size20"><b>AEU</b> : 1.38</p>
 <p data-ke-size="size10">&nbsp;</p>
 <p data-ke-size="size20"><span style="color: #ee2323;"><b>REMARK</b></span></p>
 <p data-ke-size="size20"><b>-</b> 없음</p>
