--- a/CARGO/HMC/VELOSTER.HTML
+++ b/CARGO/HMC/VELOSTER.HTML
@@ -11,7 +11,8 @@
 </table>
 <p data-ke-size="size20"><b>SIZE(L x W x H)</b> : 4.32 x 1.81 x 1.41</p>
 <p data-ke-size="size20"><b>WEIGHT(MT)</b> : 1.205</p>
-<p data-ke-size="size20"><b>STOWAGE CODE / MAKER CODE(MT)</b> : VSR / JS, JS-N</p>
+<p data-ke-size="size20"><b>STOWAGE CODE</b> : VSR</p>
+    <p data-ke-size="size20"><b>AEU</b> : 1.17</p>
 <p data-ke-size="size10">&nbsp;</p>
 <p data-ke-size="size20"><span style="color: #ee2323;"><b>REMARK</b></span></p>
 <p data-ke-size="size20"><b>-</b> 없음</p>
