--- a/CARGO/KIA/CARNIVAL(SEDONA).HTML
+++ b/CARGO/KIA/CARNIVAL(SEDONA).HTML
@@ -14,7 +14,8 @@
 </table>
 <p data-ke-size="size20"><b>SIZE(L x W x H)</b> : 5.19 x 2.04 x 1.8</p>
 <p data-ke-size="size20"><b>WEIGHT(MT)</b> : 2.141</p>
-<p data-ke-size="size20"><b>STOWAGE CODE / MAKER CODE(MT)</b> : CNV / A9</p>
+<p data-ke-size="size20"><b>STOWAGE CODE</b> : CNV</p>
+        <p data-ke-size="size20"><b>AEU</b> : 1.54</p>
 <p data-ke-size="size10">&nbsp;</p>
 <p data-ke-size="size20"><span style="color: #ee2323;"><b>REMARK</b></span></p>
 <p data-ke-size="size20"><b>-</b> 없음</p>
