--- a/CARGO/KIA/K3(CERATO).HTML
+++ b/CARGO/KIA/K3(CERATO).HTML
@@ -14,7 +14,8 @@
 </table>
 <p data-ke-size="size20"><b>SIZE(L x W x H)</b> : 4.65 x 1.84 x 1.475</p>
 <p data-ke-size="size20"><b>WEIGHT(MT)</b> : 1.38</p>
-<p data-ke-size="size20"><b>STOWAGE CODE / MAKER CODE(MT)</b> : CRT4 / DJ</p>
+<p data-ke-size="size20"><b>STOWAGE CODE</b> : CRT4</p>
+        <p data-ke-size="size20"><b>AEU</b> : 1.29</p>
 <p data-ke-size="size10">&nbsp;</p>
 <p data-ke-size="size20"><span style="color: #ee2323;"><b>REMARK</b></span></p>
 <p data-ke-size="size20"><b>-</b> 없음</p>
