--- a/CARGO/KIA/K9.HTML
+++ b/CARGO/KIA/K9.HTML
@@ -14,7 +14,8 @@
 </table>
 <p data-ke-size="size20"><b>SIZE(L x W x H)</b> : 5.255 x 1.96 x 1.505</p>
 <p data-ke-size="size20"><b>WEIGHT(MT)</b> : 2.1</p>
-<p data-ke-size="size20"><b>STOWAGE CODE / MAKER CODE(MT)</b> : K90 / J6</p>
+<p data-ke-size="size20"><b>STOWAGE CODE</b> : K90</p>
+        <p data-ke-size="size20"><b>AEU</b> : 1.54</p>
 <p data-ke-size="size10">&nbsp;</p>
 <p data-ke-size="size20"><span style="color: #ee2323;"><b>REMARK</b></span></p>
 <p data-ke-size="size20"><b>-</b> 없음</p>
