--- a/CARGO/KIA/MOHAVE(BORREGO).HTML
+++ b/CARGO/KIA/MOHAVE(BORREGO).HTML
@@ -14,7 +14,8 @@
 </table>
 <p data-ke-size="size20"><b>SIZE(L x W x H)</b> : 4.885 x 1.923 x 1.97</p>
 <p data-ke-size="size20"><b>WEIGHT(MT)</b> : 2.045</p>
-<p data-ke-size="size20"><b>STOWAGE CODE / MAKER CODE(MT)</b> : MOH / EN</p>
+<p data-ke-size="size20"><b>STOWAGE CODE</b> : MOH</p>
+        <p data-ke-size="size20"><b>AEU</b> : 1.43</p>
 <p data-ke-size="size10">&nbsp;</p>
 <p data-ke-size="size20"><span style="color: #ee2323;"><b>REMARK</b></span></p>
 <p data-ke-size="size20"><b>-</b> 없음</p>
