--- a/CARGO/KIA/MORNING(PICANTO).HTML
+++ b/CARGO/KIA/MORNING(PICANTO).HTML
@@ -14,7 +14,8 @@
 </table>
 <p data-ke-size="size20"><b>SIZE(L x W x H)</b> : 3.644 x 1.653 x 1.508</p>
 <p data-ke-size="size20"><b>WEIGHT(MT)</b> : 0.9</p>
-<p data-ke-size="size20"><b>STOWAGE CODE / MAKER CODE(MT)</b> : PCT[JA] / G6</p>
+<p data-ke-size="size20"><b>STOWAGE CODE</b> : PCT[JA]</p>
+        <p data-ke-size="size20"><b>AEU</b> : 0.93</p>
 <p data-ke-size="size10">&nbsp;</p>
 <p data-ke-size="size20"><span style="color: #ee2323;"><b>REMARK</b></span></p>
 <p data-ke-size="size20"><b>-</b> 없음</p>
