--- a/CARGO/KIA/SELTOS.HTML
+++ b/CARGO/KIA/SELTOS.HTML
@@ -14,7 +14,8 @@
 </table>
 <p data-ke-size="size20"><b>SIZE(L x W x H)</b> : 4.47 x 1.82 x 1.64</p>
 <p data-ke-size="size20"><b>WEIGHT(MT)</b> : 1.495</p>
-<p data-ke-size="size20"><b>STOWAGE CODE / MAKER CODE(MT)</b> : SEL / TH</p>
+<p data-ke-size="size20"><b>STOWAGE CODE</b> : SEL</p>
+        <p data-ke-size="size20"><b>AEU</b> : 1.24</p>
 <p data-ke-size="size10">&nbsp;</p>
 <p data-ke-size="size20"><span style="color: #ee2323;"><b>REMARK</b></span></p>
 <p data-ke-size="size20"><b>-</b> 없음</p>
