--- a/CARGO/KIA/SORENTO.HTML
+++ b/CARGO/KIA/SORENTO.HTML
@@ -14,7 +14,8 @@
 </table>
 <p data-ke-size="size20"><b>SIZE(L x W x H)</b> : 4.92 x 1.98 x 1.73</p>
 <p data-ke-size="size20"><b>WEIGHT(MT)</b> : 1.885</p>
-<p data-ke-size="size20"><b>STOWAGE CODE / MAKER CODE(MT)</b> : SRT / GZ</p>
+<p data-ke-size="size20"><b>STOWAGE CODE</b> : SRT</p>
+        <p data-ke-size="size20"><b>AEU</b> : 1.46</p>
 <p data-ke-size="size10">&nbsp;</p>
 <p data-ke-size="size20"><span style="color: #ee2323;"><b>REMARK</b></span></p>
 <p data-ke-size="size20"><b>-</b> 없음</p>
