--- a/CARGO/KIA/SOUL.HTML
+++ b/CARGO/KIA/SOUL.HTML
@@ -14,7 +14,8 @@
 </table>
 <p data-ke-size="size20"><b>SIZE(L x W x H)</b> : 4.365 x 1.8 x 1.6</p>
 <p data-ke-size="size20"><b>WEIGHT(MT)</b> : 1.287 / 1.513</p>
-<p data-ke-size="size20"><b>STOWAGE CODE / MAKER CODE(MT)</b> : SOL, SOE / J2, E4</p>
+<p data-ke-size="size20"><b>STOWAGE CODE</b> : SOL, SOE</p>
+        <p data-ke-size="size20"><b>AEU</b> : 1.17</p>
 <p data-ke-size="size10">&nbsp;</p>
 <p data-ke-size="size20"><span style="color: #ee2323;"><b>REMARK</b></span></p>
 <p data-ke-size="size20"><b>-</b> 없음</p>
