--- a/CARGO/SSYG/G4.HTML
+++ b/CARGO/SSYG/G4.HTML
@@ -14,7 +14,8 @@
 </table>
 <p data-ke-size="size20"><b>SIZE(L x W x H)</b> : 4.85 x 1.96 x 1.825</p>
 <p data-ke-size="size20"><b>WEIGHT(MT)</b> : 2.335</p>
-<p data-ke-size="size20"><b>STOWAGE CODE / MAKER CODE(MT)</b> : G4 / </p>
+<p data-ke-size="size20"><b>STOWAGE CODE</b> : G4</p>
+        <p data-ke-size="size20"><b>AEU</b> : 1.50</p>
 <p data-ke-size="size10">&nbsp;</p>
 <p data-ke-size="size20"><span style="color: #ee2323;"><b>REMARK</b></span></p>
 <p data-ke-size="size20"><b>-</b> 없음</p>
