--- a/CARGO/SSYG/KORANDO-C.HTML
+++ b/CARGO/SSYG/KORANDO-C.HTML
@@ -14,7 +14,8 @@
 </table>
 <p data-ke-size="size20"><b>SIZE(L x W x H)</b> : 4.45 x 1.87 x 1.622</p>
 <p data-ke-size="size20"><b>WEIGHT(MT)</b> : 1.567</p>
-<p data-ke-size="size20"><b>STOWAGE CODE / MAKER CODE(MT)</b> : KRD / </p>
+<p data-ke-size="size20"><b>STOWAGE CODE</b> : KRD</p>
+        <p data-ke-size="size20"><b>AEU</b> : 1.33</p>
 <p data-ke-size="size10">&nbsp;</p>
 <p data-ke-size="size20"><span style="color: #ee2323;"><b>REMARK</b></span></p>
 <p data-ke-size="size20"><b>-</b> 없음</p>
