--- a/CARGO/SSYG/KORANDO-SPORTS.HTML
+++ b/CARGO/SSYG/KORANDO-SPORTS.HTML
@@ -14,7 +14,8 @@
 </table>
 <p data-ke-size="size20"><b>SIZE(L x W x H)</b> : 4.965 x 1.9 x 1.755</p>
 <p data-ke-size="size20"><b>WEIGHT(MT)</b> : 1.87</p>
-<p data-ke-size="size20"><b>STOWAGE CODE / MAKER CODE(MT)</b> : KRDS / </p>
+<p data-ke-size="size20"><b>STOWAGE CODE</b> : KRDS</p>
+        <p data-ke-size="size20"><b>AEU</b> : 1.49</p>
 <p data-ke-size="size10">&nbsp;</p>
 <p data-ke-size="size20"><span style="color: #ee2323;"><b>REMARK</b></span></p>
 <p data-ke-size="size20"><b>-</b> 없음</p>
