--- a/CARGO/SSYG/REXTON-SPORT(MUSSO).HTML
+++ b/CARGO/SSYG/REXTON-SPORT(MUSSO).HTML
@@ -14,7 +14,8 @@
 </table>
 <p data-ke-size="size20"><b>SIZE(L x W x H)</b> : 5.095 x 1.95 x 1.84</p>
 <p data-ke-size="size20"><b>WEIGHT(MT)</b> : 2.05</p>
-<p data-ke-size="size20"><b>STOWAGE CODE / MAKER CODE(MT)</b> : REXS / </p>
+<p data-ke-size="size20"><b>STOWAGE CODE</b> : REXS</p>
+        <p data-ke-size="size20"><b>AEU</b> : 1.60</p>
 <p data-ke-size="size10">&nbsp;</p>
 <p data-ke-size="size20"><span style="color: #ee2323;"><b>REMARK</b></span></p>
 <p data-ke-size="size20"><b>-</b> 없음</p>
