--- a/CARGO/SSYG/REXTON-SPORTKHAN(MUSSO G).HTML
+++ b/CARGO/SSYG/REXTON-SPORTKHAN(MUSSO G).HTML
@@ -14,7 +14,8 @@
 </table>
 <p data-ke-size="size20"><b>SIZE(L x W x H)</b> : 5.405 x 1.95 x 1.861</p>
 <p data-ke-size="size20"><b>WEIGHT(MT)</b> : 2.079</p>
-<p data-ke-size="size20"><b>STOWAGE CODE / MAKER CODE(MT)</b> : REXK / </p>
+<p data-ke-size="size20"><b>STOWAGE CODE</b> : REXK</p>
+        <p data-ke-size="size20"><b>AEU</b> : 1.60</p>
 <p data-ke-size="size10">&nbsp;</p>
 <p data-ke-size="size20"><span style="color: #ee2323;"><b>REMARK</b></span></p>
 <p data-ke-size="size20"><b>-</b> 없음</p>
