--- a/CARGO/SSYG/TIVOLI-AIR.HTML
+++ b/CARGO/SSYG/TIVOLI-AIR.HTML
@@ -14,7 +14,8 @@
 </table>
 <p data-ke-size="size20"><b>SIZE(L x W x H)</b> : 4.48 x 1.81 x 1.645</p>
 <p data-ke-size="size20"><b>WEIGHT(MT)</b> : 1.365</p>
-<p data-ke-size="size20"><b>STOWAGE CODE / MAKER CODE(MT)</b> : TVLA / </p>
+<p data-ke-size="size20"><b>STOWAGE CODE</b> : TVLA</p>
+        <p data-ke-size="size20"><b>AEU</b> : 1.24</p>
 <p data-ke-size="size10">&nbsp;</p>
 <p data-ke-size="size20"><span style="color: #ee2323;"><b>REMARK</b></span></p>
 <p data-ke-size="size20"><b>-</b> 없음</p>
