--- a/CARGO/SSYG/TIVOLI.HTML
+++ b/CARGO/SSYG/TIVOLI.HTML
@@ -14,7 +14,8 @@
 </table>
 <p data-ke-size="size20"><b>SIZE(L x W x H)</b> : 4.182 x 1.775 x 1.615</p>
 <p data-ke-size="size20"><b>WEIGHT(MT)</b> : 1.417</p>
-<p data-ke-size="size20"><b>STOWAGE CODE / MAKER CODE(MT)</b> : TVL / </p>
+<p data-ke-size="size20"><b>STOWAGE CODE</b> : TVL</p>
+        <p data-ke-size="size20"><b>AEU</b> : 1.18</p>
 <p data-ke-size="size10">&nbsp;</p>
 <p data-ke-size="size20"><span style="color: #ee2323;"><b>REMARK</b></span></p>
 <p data-ke-size="size20"><b>-</b> 없음</p>
