--- a/M.HYUNDAI.HTML
+++ b/M.HYUNDAI.HTML
@@ -20,7 +20,11 @@
           <option value="선박선택">MODEL</option> 
           <option value="https://AWEGG0416.GITHUB.IO/CARGO/HMC/AVANTE.HTML">AVANTE</option> 
           <option value="https://AWEGG0416.GITHUB.IO/CARGO/HMC/G70.HTML">G70</option> 
-          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HMC/G80.HTML">G80</option> 
+          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HMC/G80.HTML">G80</option>
+          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HMC/G90.HTML">G90</option>      
+          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HMC/GV70.HTML">GV70</option>
+          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HMC/GV80.HTML">GV80</option>      
+          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HMC/I30.HTML">I30</option>      
        </select>
     </form>
     <iframe id="myIframe" src="https://AWEGG0416.GITHUB.IO/VESSEL.jpg" frameborder="0" marginwidth="0" marginheight="0" width=100% height=80%></iframe>
