--- a/WEATHER.HTML
+++ b/WEATHER.HTML
@@ -32,7 +32,8 @@
           <option value="https://embed.windy.com/embed2.html?lat=35.925&lon=126.958&detailLat=35.232&detailLon=128.682&width=650&height=450&zoom=5&level=surface&overlay=wind&product=ecmwf&menu=&message=true&marker=&calendar=now&pressure=true&type=map&location=coordinates&detail=&metricWind=default&metricTemp=default&radarRange=-1" frameborder="0">바람</option> 
           <option value="https://www.weather.go.kr/w/typhoon/ko/weather/typhoon_02.jsp">태풍</option>
           <option value="https://www.weather.go.kr/w/dust/dust-obs/values.do">황사</option>
-          <option value="https://www.weather.go.kr/w/weather/warning/fog.do">안개</option>  
+          <option value="https://www.weather.go.kr/w/weather/warning/fog.do">안개</option> 
+          <option value="http://www.imocwx.com/wxfax/fsas_00.htm">기상도</option> 
       </select>
     </form>
  
