--- a/ETC.HTML
+++ b/ETC.HTML
@@ -19,7 +19,7 @@
           <label STYLE= "font-size: 40px;"> SELECT SUBJECT</label></P>
         <select id="location" onchange="setIframeSource()" STYLE= "font-size: 40px; width: 100%; TEXT-ALIGN:CENTER"> 
           <option value="선박선택">항목선택</option> 
-          <option value="https://AWEGG0416.GITHUB.IO/V.DONJUAN.HTML">=====</option> 
+          <option value="https://AWEGG0416.GITHUB.IO/E.PILOT.HTML">도선예보</option> 
           <option value="https://www.americanas.com.br/">======</option> 
           <option value="https://www.bbc.com/">======</option> 
        </select>
