--- a/E.PILOT.HTML
+++ b/E.PILOT.HTML
@@ -32,7 +32,7 @@
                               
     <table style="border-collapse: collapse; width: 100%;" border="0" data-ke-align="alignLeft">
 <tbody>
-<tr>
+<tr style="width: 100%;">
 <td style="width: 100%;">                          
     <iframe id="myIframe" src="https://search.pstatic.net/sunny/?src=https%3A%2F%2Fc.pxhere.com%2Fphotos%2F63%2F46%2Fboat_ship_pilot_nautical_vessel_sea_ocean_harbor-623748.jpg%21d&type=sc960_832" frameborder="0" marginwidth="0" marginheight="0" width=100% height=100%></iframe>
 </td>
