--- a/WEATHER.HTML
+++ b/WEATHER.HTML
@@ -33,7 +33,7 @@
           <option value="https://www.weather.go.kr/w/typhoon/ko/weather/typhoon_02.jsp">태풍</option>
           <option value="https://www.weather.go.kr/w/dust/dust-obs/values.do">황사</option>
           <option value="https://www.weather.go.kr/w/weather/warning/fog.do">안개</option> 
-          <option value="http://www.imocwx.com/wxfax/fsas_00.htm">기상도</option> 
+          <option value="https://www.imocwx.com/wxfax/fsas_00.htm">기상도</option> 
       </select>
     </form>
  
