--- a/E.PILOT.HTML
+++ b/E.PILOT.HTML
@@ -18,10 +18,10 @@
 
         <select id="location" onchange="setIframeSource()" STYLE= "font-size: 40px; width: 100%; TEXT-ALIGN:CENTER"> 
  <option value="====">SELECT LOCATION</option>  
-          <option value="비공개">군산</option>
+          <option value="비공개">군산(비공개)</option>
           <option value="http://www.yspilot.co.kr/forecast">광양</option>
-          <option value=비공개">마산</option> 
-          <option value="비공개">목포</option>
+          <option value=비공개">마산(비공개)</option> 
+          <option value="비공개">목포(비공개)</option>
           <option value="http://www.ulsanpilot.co.kr/main/pilot_forecast.php">울산</option>
           <option value="http://www.incheonpilot.com/pilot/pilot04.asp">인천</option> 
           <option value="http://www.ptpilot.co.kr/main/pop_forecast">평택</option>
