--- a/WEATHER.HTML
+++ b/WEATHER.HTML
@@ -19,7 +19,7 @@
        <label STYLE= "font-size: 40px;"> 날씨 정보</label></P>
         <select id="location" onchange="setIframeSource()" STYLE= "font-size: 40px; width: 100%; TEXT-ALIGN:CENTER"> 
 
-         <option value="====">SELECT LOCATION</option>  
+         <option value="https://www.weather.go.kr/wgis-nuri/html/map.html">SELECT LOCATION</option>  
           <option value="https://AWEGG0416.GITHUB.IO/KUNSAN.HTML">군산</option>
           <option value="https://AWEGG0416.GITHUB.IO/KWANGYANG.HTML">광양</option>
           <option value="https://AWEGG0416.GITHUB.IO/MASAN.HTML">마산</option> 
@@ -33,7 +33,7 @@
           <option value="https://www.weather.go.kr/w/typhoon/ko/weather/typhoon_02.jsp">태풍</option>
           <option value="https://www.weather.go.kr/w/dust/dust-obs/values.do">황사</option>
           <option value="https://www.weather.go.kr/w/weather/warning/fog.do">안개</option> 
-          <option value="https://www.imocwx.com/wxfax/fsas_00">기상도</option> 
+          <option value="https://www.imocwx.com/wxfax/fsas_00.htm">기상도</option> 
       </select>
     </form>
  
