--- a/M.HYUNDAI.HTML
+++ b/M.HYUNDAI.HTML
@@ -17,7 +17,7 @@
     <form id="form1" method="post">
 
         <select id="location" onchange="setIframeSource()" STYLE= "font-size: 40px; width: 100%; TEXT-ALIGN:CENTER"> 
-          <option value="선박선택">MODEL</option> 
+          <option value="https://t1.daumcdn.net/cfile/tistory/9997644C5AF2495809">MODEL</option> 
           <option value="https://AWEGG0416.GITHUB.IO/CARGO/HMC/AVANTE.HTML">AVANTE</option> 
           <option value="https://AWEGG0416.GITHUB.IO/CARGO/HMC/G70.HTML">G70</option> 
           <option value="https://AWEGG0416.GITHUB.IO/CARGO/HMC/G80.HTML">G80</option>
