--- a/M.KIA.HTML
+++ b/M.KIA.HTML
@@ -18,9 +18,17 @@
 
         <select id="location" onchange="setIframeSource()" STYLE= "font-size: 40px; width: 100%; TEXT-ALIGN:CENTER"> 
           <option value="선박선택">MODEL</option> 
-          <option value="https://AWEGG0416.GITHUB.IO/C.HMC.VENUE.HTML">VENUE</option> 
-          <option value="https://www.americanas.com.br/">AMERICANAS</option> 
-          <option value="https://www.bbc.com/">BBC</option> 
+          <option value="https://AWEGG0416.GITHUB.IO/CARGO/KIA/CARNIVAL(SEDONA).HTML">CARNIVAL(SEDONA)</option>
+          <option value="https://AWEGG0416.GITHUB.IO/CARGO/KIA/K3(CERATO).HTML">K3(CERATO)</option>
+                <option value="https://AWEGG0416.GITHUB.IO/CARGO/KIA/K5(OPTIMA).HTML">K5(OPTIMA)</option>
+                <option value="https://AWEGG0416.GITHUB.IO/CARGO/KIA/K9.HTML">K9</option>
+                <option value="https://AWEGG0416.GITHUB.IO/CARGO/KIA/MOHAVE(BORREGO).HTML">MOHAVE(BORREGO)</option>
+                <option value="https://AWEGG0416.GITHUB.IO/CARGO/KIA/MORNING(PICANTO).HTML">MORNING(PICANTO)</option>
+                <option value="https://AWEGG0416.GITHUB.IO/CARGO/KIA/NIRO.HTML">NIRO</option>
+                <option value="https://AWEGG0416.GITHUB.IO/CARGO/KIA/SELTOS.HTML">SELTOS</option>
+                <option value="https://AWEGG0416.GITHUB.IO/CARGO/KIA/SOUL.HTML">SOUL</option>
+                <option value="https://AWEGG0416.GITHUB.IO/CARGO/KIA/SPORTAGE.HTML">SPORTAGE</option>
+                <option value="https://AWEGG0416.GITHUB.IO/CARGO/KIA/STONIC.HTML">STONIC</option>
        </select>
     </form>
     <iframe id="myIframe" src="https://AWEGG0416.GITHUB.IO/VESSEL.jpg" frameborder="0" marginwidth="0" marginheight="0" width=100% height=80%></iframe>
