--- a/M.SSANGYONG.HTML
+++ b/M.SSANGYONG.HTML
@@ -18,9 +18,13 @@
 
         <select id="location" onchange="setIframeSource()" STYLE= "font-size: 40px; width: 100%; TEXT-ALIGN:CENTER"> 
           <option value="선박선택">MODEL</option> 
-          <option value="https://AWEGG0416.GITHUB.IO/C.HMC.VENUE.HTML">VENUE</option> 
-          <option value="https://www.americanas.com.br/">AMERICANAS</option> 
-          <option value="https://www.bbc.com/">BBC</option> 
+          <option value="https://AWEGG0416.GITHUB.IO/CARGO/SSYG/G4.HTML">G4</option>
+                <option value="https://AWEGG0416.GITHUB.IO/CARGO/SSYG/KORANDO-C.HTML">KORANDO-C</option>
+                <option value="https://AWEGG0416.GITHUB.IO/CARGO/SSYG/KORANDO-SPORTS.HTML">KORANDO-SPORTS</option>
+                <option value="https://AWEGG0416.GITHUB.IO/CARGO/SSYG/REXTON-SPORT(MUSSO).HTML">REXTON-SPORT(MUSSO)</option>
+                <option value="https://AWEGG0416.GITHUB.IO/CARGO/SSYG/REXTON-SPORTKHAN(MUSSO G).HTML">REXTON-SPORTKHAN(MUSSO G)</option>
+                <option value="https://AWEGG0416.GITHUB.IO/CARGO/SSYG/TIVOLI-AIR.HTML">TIVOLI-AIR</option>
+                <option value="https://AWEGG0416.GITHUB.IO/CARGO/SSYG/TIVOLI.HTML">TIVOLI</option>
        </select>
     </form>
     <iframe id="myIframe" src="https://AWEGG0416.GITHUB.IO/VESSEL.jpg" frameborder="0" marginwidth="0" marginheight="0" width=100% height=80%></iframe>
