--- a/CARGO.HTML
+++ b/CARGO.HTML
@@ -22,8 +22,8 @@
           <option value="https://AWEGG0416.GITHUB.IO/M.HYUNDAI.HTML">HYUNDAI</option> 
           <option value="https://AWEGG0416.GITHUB.IO/M.KIA.HTML">KIA</option> 
           <option value="https://AWEGG0416.GITHUB.IO/M.SSANGYONG.HTML">SSANGYONG</option>
-          <option value="https://www.bbc.com/">VOLVO</option>
-          <option value="https://www.bbc.com/">준비중</option>
+          <option value="https://AWEGG0416.GITHUB.IO/M.VOLVO.HTML">VOLVO</option>
+          <option value="https://AWEGG0416.GITHUB.IO/M.HYUNDAI-CE.HTML">HYUNDAI-CE</option>
        </select>
     </form>
     <iframe id="myIframe" src="https://AWEGG0416.GITHUB.IO/CARGO.JPG" frameborder="0" marginwidth="0" marginheight="0" width=100% height=80%></iframe>
