--- a/CARGO.HTML
+++ b/CARGO.HTML
@@ -24,6 +24,7 @@
           <option value="https://AWEGG0416.GITHUB.IO/M.SSANGYONG.HTML">SSANGYONG</option>
           <option value="https://AWEGG0416.GITHUB.IO/M.VOLVO.HTML">VOLVO</option>
           <option value="https://AWEGG0416.GITHUB.IO/M.HYUNDAI-CE.HTML">HYUNDAI-CE</option>
+          <option value="https://AWEGG0416.GITHUB.IO/M.VOLVO-CE.HTML">VOLVO-CE</option>
        </select>
     </form>
     <iframe id="myIframe" src="https://AWEGG0416.GITHUB.IO/CARGO.JPG" frameborder="0" marginwidth="0" marginheight="0" width=100% height=80%></iframe>
