--- a/E.ETA.PYUNGTAEK.HTML
+++ b/E.ETA.PYUNGTAEK.HTML
@@ -43,7 +43,7 @@ document.getElementById("current_date").innerHTML = year + "-" + month + "-" + d
 
 2. 예상되는 이동 속도를 입력 해주세요 <br>
   <p style="text-align: center;" data-ke-size="size16">
-<input type="text" id="b" size="8">(Kt)
+<input type="number" id="b" size="8">(Kt)
 <br><br>  
 </p>
 3. Berth to P/S은 3시간으로 고려 되었습니다.
