--- a/E.ETA.PYUNGTAEK.HTML
+++ b/E.ETA.PYUNGTAEK.HTML
@@ -1,6 +1,6 @@
 <html>
 <head>
-<meta name="viewport" content="width=device-width,initial-scale=0.78">
+        <meta name="viewport" content="width=device-width,initial-scale=0.78">
 <meta charset="UTF-8">
 <title>ETA CALCULATION</title>
   
@@ -13,16 +13,16 @@
   
 <h2>ETA 계산기</h2>
 
+<div style= "font-size:20px;">
 
 
-
-1. 출발 시각을 입력해주세요(시간 단위로 00~24) <br>
+1. 출발 시각을 입력해주세요 <br>(시간 단위로 00~24) <br>
   <br>
-  
+
  <table style="border-collapse: collapse; width: 100%;" border="0" data-ke-align="alignLeft">
 <tbody>
 <tr>
-<td style="width: 100%; text-align: center;">
+<td style="width: 100%; text-align: center; font-size: 25px; ">
   <div id="current_date">
 <script>
 date = new Date();
@@ -31,7 +31,7 @@ month = date.getMonth() + 1;
 day = date.getDate();
 document.getElementById("current_date").innerHTML = year + "-" + month + "-" + day;
 </script>  
-  <input type="number" id="a" size="8">시
+  <input type="number" id="a" size="8" style="WIDTH: 100pt; HEIGHT: 40pt; font-size: 25px;">시
 
   </td>
 </tr>
@@ -43,18 +43,16 @@ document.getElementById("current_date").innerHTML = year + "-" + month + "-" + d
 
 2. 예상되는 이동 속도를 입력 해주세요 <br>
   <p style="text-align: center;" data-ke-size="size16">
-<input type="number" id="b" size="8">(Kt)
+<input type="number" id="b" size="8" style="WIDTH: 100pt; HEIGHT: 40pt; font-size: 25px;">(Kt)
 <br><br>  
 </p>
 3. Berth to P/S은 3시간으로 고려 되었습니다.
 <br><br>  
 <p style="text-align: center;" data-ke-size="size16">
-<button type="button" onclick="div()">계산하기</button>
+<button type="button" onclick="div()" style="WIDTH: 100pt; HEIGHT: 40pt; font-size: 25px;">계산하기</button>
 
- 
-
-
-<p data-ke-size="size16">&nbsp;</p>
+  </div>
+<p data-ke-size="size ">&nbsp;</p>
 <table style="border-collapse: collapse; width: 100%; height: 140px;" border="1" data-ke-align="alignLeft">
 <tbody>
 <tr style="height: 20px;">
