--- a/E.ETA.HTML
+++ b/E.ETA.HTML
@@ -23,8 +23,8 @@
           <option value="https://AWEGG0416.GITHUB.IO/E.ETA.MASAN.HTML">마산</option> 
           <option value="https://AWEGG0416.GITHUB.IO/E.ETA.MOKPO.HTML">목포</option>
           <option value="https://AWEGG0416.GITHUB.IO/E.ETA.ULSAN.HTML">울산</option>
-          <option value="https://AWEGG0416.GITHUB.IO/E.ETA.PYUNGTAEK.HTML">인천</option> 
-          <option value="https://AWEGG0416.GITHUB.IO/E.ETA.PYUNGTAEK.HTML">평택</option>            
+          <option value="https://AWEGG0416.GITHUB.IO/E.ETA.PYUNGTAEK.HTML">평택</option> 
+          <option value="https://AWEGG0416.GITHUB.IO/E.ETA.PYUNGTAEK.HTML">===</option>            
 
       </select>
     </form>
